@@ -1,3 +1,7 @@
+2009-10-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* plugin.c: Produce empty object if not BFD_SUPPORTS_PLUGINS.
+
 2009-10-20  Alan Modra  <amodra@bigpond.net.au>
 
 	PR binutils/10802
